Add new templeate to dashboard

--- a/src/DashboardBundle/Resources/views/Profile/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Profile/index.html.twig
@@ -70,6 +70,14 @@
 			 box-shadow: inset 0 -2px 0 0 #eeeeee;
 			 width: 100%;
 		 }
+		nav .brand-logo {
+			color: #424242;
+			font-size: 18px;
+		}
+		nav, nav .button-collapse.sp-cancel, nav .button-collapse.sp-cancel i, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+			height: 45px;
+			line-height: 45px;
+		}
 	</style>
 		<div class="row">
 			<div class="col m3" style="padding-right: 20px;">
@@ -105,14 +113,29 @@
 			</div>
 			<div class="col m9" style="border-left: 1px solid #eee;background-color: #FFFFFF;min-height: 570px;border-bottom: 1px solid #eee;">
 				<div class="row" style="margin-top: 0px">
-					<div class="col s12">
+					<div class="col s12" style="padding-bottom: 5px;">
 						<ul class="tabs tab-nav">
 							<li class="tab col s1 waves-effect"><a href="#test1" class="active">ABOUT</a></li>
 							<li class="tab col s1 waves-effect"><a href="#test2">CONTACTS</a></li>
 							<li class="tab col s1 waves-effect"><a href="#test3">Test 3</a></li>
 						</ul>
 					</div>
-					<div id="test1" class="col s12">Test 1</div>
+					<div id="test1" class="col s12">
+
+						<nav style="color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
+							<div class="nav-wrapper">
+								<a href="#!" class="brand-logo">Basic Information</a>
+								<ul class="right hide-on-med-and-down">
+									<li>
+										<a style="color: #424242;" class="dropdown-button" href="#!">
+											<i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</nav>
+
+					</div>
 					<div id="test2" class="col s12">Test 2</div>
 					<div id="test3" class="col s12">Test 3</div>
 				</div>
