Create User Profile mockup

--- a/src/DashboardBundle/Resources/views/Profile/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Profile/index.html.twig
@@ -143,22 +143,74 @@
 							<li class="tab col s1 waves-effect"><a href="#test3">Test 3</a></li>
 						</ul>
 					</div>
-					<div id="test1" class="col s12">
+					<div id="test1" class="col s12" style="color: #5e5e5e;">
 
-						<nav style="color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
-							<div class="nav-wrapper">
-								<a href="#!" class="brand-logo">Basic Information</a>
-								<ul class="right hide-on-med-and-down">
-									<li>
-										<a style="color: #424242;" class="dropdown-button" href="#!">
-											<i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
-										</a>
-									</li>
-								</ul>
+						<div class="row">
+							<nav style="color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
+								<div class="nav-wrapper">
+									<a href="#!" class="brand-logo">Basic Information</a>
+									<ul class="right hide-on-med-and-down">
+										<li>
+											<a style="color: #424242;" class="dropdown-button" href="#!">
+												<i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</nav>
+
+							<div class="row" style="margin-top: 0px;">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Full Name:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Livan Frometa</span></div>
 							</div>
-						</nav>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Gender:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Male</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Birthday:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	June 23, 1990</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Martial Status:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Single</span></div>
+							</div>
+						</div>
 
-						<div class="row" style="padding-left: 20px;padding-right: 20px;margin-top: 0rem;">
+						<div class="row">
+							<nav style="color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
+								<div class="nav-wrapper">
+									<a href="#!" class="brand-logo">Contact  Information</a>
+									<ul class="right hide-on-med-and-down">
+										<li>
+											<a style="color: #424242;" class="dropdown-button" href="#!">
+												<i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</nav>
+
+							<div class="row" style="margin-top: 0px;">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Mobile Phone:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	00971 12345678 9</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Email Address:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	malinda.h@gmail.com</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Twitter:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	@malinda</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Skype:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	malinda.hollaway</span></div>
+							</div>
+
+						</div>
+
+						<div class="row" style="padding-left: 20px;padding-right: 20px">
 							<form action="">
 
 								<div class="row" style="margin-top: 0rem;">
@@ -232,6 +284,21 @@
 										<div class="input-field align-left">
 											<input id="input_text_ra1" type="text" class="validate">
 											<label for="input_text_ra1">Pa&iacute;s</label>
+										</div>
+									</div>
+								</div>
+
+								<div class="row" style="margin-top: 0rem;">
+									<div class="col m6" style="padding-bottom: 0px;">
+										<div class="input-field align-left">
+											<input id="input_text_licence" type="text" class="validate">
+											<label for="input_text_licence">Licence</label>
+										</div>
+									</div>
+									<div class="col m6" style="padding-bottom: 0px;">
+										<div class="input-field align-left">
+											<input id="input_text_state" type="text" class="validate">
+											<label for="input_text_state">Web</label>
 										</div>
 									</div>
 								</div>
