Create User Profile mockup

--- a/src/DashboardBundle/Resources/views/Profile/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Profile/index.html.twig
@@ -303,6 +303,12 @@
 									</div>
 								</div>
 
+								<div class="row" style="padding-right: 25px;padding-top: 20px">
+									<div class="col s12">
+										<a class="waves-effect waves-light btn btn-small">SAVE</a>
+										<a class="waves-effect waves-light btn btn-small red">CANCEL</a>
+									</div>
+								</div>
 							</form>
 						</div>
 					</div>
