--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -35,7 +35,7 @@
           </ul>
         </li>
         <li>
-          <a href="#" class="waves-effect waves-blue"><i
+          <a href="{{path('flyer_index')}}" class="waves-effect waves-blue"><i
               class="fa fa-magic"></i> Flayer
           </a>
         </li>
