--- a/src/DashboardBundle/Resources/views/Profile/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Profile/index.html.twig
@@ -160,8 +160,12 @@
 							</nav>
 
 							<div class="row" style="margin-top: 0px;">
-								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Full Name:</b> </strong></span></div>
-								<div class="col s9" style="padding-bottom: 10px;"> <span>	Livan Frometa</span></div>
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>First Name:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Livan</span></div>
+							</div>
+							<div class="row" style="margin-top: 0px;">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Last Name:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Frometa</span></div>
 							</div>
 							<div class="row">
 								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Gender:</b> </strong></span></div>
@@ -170,10 +174,6 @@
 							<div class="row">
 								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Birthday:</b> </strong></span></div>
 								<div class="col s9" style="padding-bottom: 10px;"> <span>	June 23, 1990</span></div>
-							</div>
-							<div class="row">
-								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Martial Status:</b> </strong></span></div>
-								<div class="col s9" style="padding-bottom: 10px;"> <span>	Single</span></div>
 							</div>
 						</div>
 
@@ -195,9 +195,37 @@
 								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Mobile Phone:</b> </strong></span></div>
 								<div class="col s9" style="padding-bottom: 10px;"> <span>	00971 12345678 9</span></div>
 							</div>
+							<div class="row" style="margin-top: 0px;">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Office Phone:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	00971 12345678 9</span></div>
+							</div>
 							<div class="row">
 								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Email Address:</b> </strong></span></div>
 								<div class="col s9" style="padding-bottom: 10px;"> <span>	malinda.h@gmail.com</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Company:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	DWELL Real Estate</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Address:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	1028 SW 66 AVE</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>City:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Miami</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>State:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	Florida</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Country:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	United States</span></div>
+							</div>
+							<div class="row">
+								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Website:</b> </strong></span></div>
+								<div class="col s9" style="padding-bottom: 10px;"> <span>	http://sample.com</span></div>
 							</div>
 							<div class="row">
 								<div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Twitter:</b> </strong></span></div>
