Integrate apy grid bundle

--- a/src/DashboardBundle/Resources/views/Flyer/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Flyer/index.html.twig
@@ -5,5 +5,5 @@
 {% endblock breadcrumb%}
 
 {% block content %}
-
+	{{ grid(grid, 'DashboardBundle:Grid:gridTemplateAjax.html.twig') }}
 {% endblock content %}
