--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateAjax.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateAjax.html.twig
@@ -5,7 +5,7 @@
  # @version 1.0.0
  #}
 
-{% extends 'CommonBundle:grid:gridTemplate.html.twig' %}
+{% extends 'DashboardBundle:Grid:gridTemplate.html.twig' %}
 
 {% block grid_scripts_goto %}
 
@@ -14,6 +14,7 @@ function {{ grid.hash }}_goto(url, data, type)
     type = type || 'GET';
     data = data || [];
 
+    alert('asasasas');
     $('#genericContainerTable').html('');
     $('.grid-loading').css('display','block');
     
