Integrate apy grid bundle

--- a/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
@@ -38,7 +38,7 @@
                 {{ grid_filters(grid) }}
            {% endif %} 
         {# Aqui se renderiza la tabla#}
-            <div class="row center-align grid-loading">
+            <div class="row center-align grid-loading" style="display: none">
                      <div class="col s12">
                          <!-- Circular big -->
                          <div class="preloader-wrapper big active">
