--- a/src/DashboardBundle/Resources/views/Common/backend2.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/backend2.html.twig
@@ -11,7 +11,7 @@
     <link  href="{{ asset('bundles/dashboard/material/css/weather-icons.min.css') }}" rel="stylesheet" type="text/css" />
     <link  href="{{ asset('bundles/dashboard/material/css/con-base.min.css') }}" rel="stylesheet" type="text/css" />
     <link  href="{{ asset('bundles/dashboard/main/css/main.css') }}" rel="stylesheet" type="text/css" />
-    <script src="{{ asset('bundles/dashboard/material/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bundles/dashboard/material/js/jquery-1.11.2.min.js') }}"></script>
 {% endblock stylesheets %}
 
 {% block body %}
