--- a/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
@@ -235,7 +235,7 @@
 {% block grid_filters %}
     <ul class="collapsible" data-collapsible="accordion">
         <li {% if grid.isFiltered %} class="active" {% endif %}>
-            <div class="collapsible-header {% if grid.isFiltered %} active {% endif %}"><i class="mdi-content-filter-list"></i>{{'ADMIN.GRID.FILTER'|trans}}</div>
+            <div class="align-left collapsible-header {% if grid.isFiltered %} active {% endif %}"><i class="mdi-content-filter-list"></i>{{'Filters'|trans}}</div>
             <div class="collapsible-body" style="background-color: #FFFFFF">
                 <table>
                     <tr class="grid-row-filters row">
