--- a/src/DashboardBundle/Resources/views/Flyer/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Flyer/index.html.twig
@@ -4,13 +4,18 @@
 	<li><a href="#">Flyers</a></li>
 {% endblock breadcrumb%}
 
+{% set idFormGrid  = grid.hash %}
+
 {% block content %}
 	<div class="card card-data-grid">
 		<div class="title">
 			<h5> Properties </h5>
 			<div class="btn-group right">
 				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-content-add left"></i>Add</a>
-				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-content-create left"></i>Edit</a>
+				<a id="edit_action" class="btn btn-small waves-dark waves-effect">
+					<i class="mdi mdi-content-create left"></i>
+					Edit
+				</a>
 				<a class="btn btn-small waves-dark waves-effect red"><i class="mdi mdi-content-clear left"></i>Delete</a>
 				</div>
 		</div>
@@ -18,4 +23,13 @@
 			{{ grid(grid, 'DashboardBundle:Grid:gridTemplateAjax.html.twig') }}
 		</div>
 	</div>
+
+	<script>
+		$(document).ready(function(){
+			$('#edit_action').click(function(){
+				$('#{{idFormGrid}}').attr('action', '{{path("flyer_create")}}');
+    		$('#{{idFormGrid}}').submit();
+			});
+		});
+	</script>
 {% endblock content %}
