--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -25,14 +25,10 @@
             <i class="ion ion-social-angular"></i> Dashboard
           </a>
         </li>
-        <li class="">
-          <a href="#" class="yay-sub-toggle waves-effect waves-blue"><i
-              class="fa fa-dashboard"></i> Properties <span
-              class="yay-collapse-icon mdi-navigation-expand-more"></span></a>
-          <ul style="display: none; height: 80px; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px;">
-            <li><a href="{{path('properties_index')}}" class="waves-effect waves-blue">My Properties</a></li>
-            <li><a href="{{path('properties_index')}}" class="waves-effect waves-blue">MLS Properties</a></li>
-          </ul>
+        <li>
+          <a href="{{path('properties_index')}}" class="waves-effect waves-blue">
+            <i class="ion ion-social-angular"></i> My Properties
+          </a>
         </li>
         <li>
           <a href="{{path('flyer_index')}}" class="waves-effect waves-blue"><i
