--- a/src/DashboardBundle/Resources/views/Flyer/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Flyer/index.html.twig
@@ -9,7 +9,7 @@
 {% block content %}
 	<div class="card card-data-grid">
 		<div class="title">
-			<h5> Properties </h5>
+			<h5> Flyers </h5>
 			<div class="btn-group right">
 				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-content-add left"></i>Add</a>
 				<a id="edit_action" class="btn btn-small waves-dark waves-effect">
