--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
-	<li><a href="#">Properties</a></li>
+	<li><a href="#">My Properties</a></li>
 {% endblock breadcrumb%}
 
 {% set idFormGrid  = grid.hash %}
@@ -9,7 +9,7 @@
 {% block content %}
 	<div class="card">
 		<div class="title">
-			<h5> Properties </h5>
+			<h5> My Properties </h5>
 			<div class="btn-group right">
 				<a class="btn btn-small waves-dark waves-effect" href="{{ path('properties_design') }}">
 					<i class="mdi mdi-content-add left"></i>Add
