--- a/src/DashboardBundle/Resources/views/Templates/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Templates/index.html.twig
@@ -26,7 +26,7 @@
       <div class="card small ">
         <div class="card-image card-image-templeate hoverable"><img src="{{asset('bundles/dashboard/images/templates/' ~ template.image)}}">
           <div class="card-action card-action-templeate">
-            <a href="{{path('flyer_create', {'property_id':property_id, 'property_type':property_type, 'id_template':template.id})}}" class="azure-text">{{template.name}}</a>
+            <a href="{{path('flyer_design', {'property_id':property_id, 'id_template':template.id})}}" class="azure-text">{{template.name}}</a>
             <a href="#" class="azure-text right"><i class="fa fa-heart"></i></a>
             <a href="#" class="azure-text right"><i class="fa fa-share-alt"></i></a>
           </div>
