--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -12,7 +12,7 @@
 			<h5> Properties </h5>
 
 			<ul id='dropdown2' class='dropdown-content'>
-				<li><a href="#!">New</a></li>
+				<li><a href="{{ path('properties_design') }}">New</a></li>
 				<li><a href="#!">From Mls</a></li>
 			</ul>
 			<div class="btn-group right">
