--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -1,13 +1,14 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block stylesheets_priority %}
-  {{parent()}}
-  <link  href="{{ asset('bundles/dashboard/material/css/select2.min.css') }}" rel="stylesheet" type="text/css" />
+  {{ parent() }}
+  <link href="{{ asset('bundles/dashboard/material/css/select2.min.css') }}" rel="stylesheet" type="text/css"/>
   <style>
     #map-canvas {
       height: 200px;
       margin-bottom: 30px;
     }
+
     #pac-input {
       background-color: #fff;
       padding: 0 11px 0 13px;
@@ -25,15 +26,38 @@
 {% endblock breadcrumb %}
 
 {% block content %}
+  <div class="row">
+    <div class="col m12">
+      <ul class="tabs z-depth-1" style="width: 100%;">
+        <li class="tab col s3"><a class="active" href="#icons-mdi">Main Information</a></li>
+        <li class="tab col s3"><a href="#icons-fa" class="">Image Gallery</a></li>
+        <li class="tab col s3"><a href="#icons-ion" class="">Files</a></li>
+      </ul>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col m12">
+
   <form action="#!">
-    <div class="card-panel">
-      <div class="input-field">
-        <input id="input_name" type="text" name="name" length="100">
-        <label for="input_name" class="">Name</label>
+    <div class="card">
+      <div class="title">
+        <h5> Basic Information </h5>
+        <div class="btn-group right">
+          <a href="#!" class="waves-effect waves-dark btn btn-small"><i class="mdi mdi-content-save left"></i>Save</a>
+
+        </div>
       </div>
-      <div class="input-field">
-        <textarea id="textarea-message" class="materialize-textarea" name="message" length="250"></textarea>
-        <label for="textarea-message">Message</label>
+      <div class="content">
+        <div class="input-field">
+          <input id="input_name" type="text" name="name" length="100">
+          <label for="input_name" class="">Name</label>
+        </div>
+        <div class="input-field">
+          <textarea id="textarea-message" class="materialize-textarea" name="message" length="250"></textarea>
+          <label for="textarea-message">Message</label>
+        </div>
       </div>
     </div>
     <div class="card">
@@ -115,16 +139,20 @@
       </div>
     </div>
   </form>
+    </div>
+  </div>
 {% endblock %}
 
 {% block javascripts %}
-  {{parent()}}
+  {{ parent() }}
   <script src="{{ asset('bundles/dashboard/material/js/select2.full.min.js') }}"></script>
 
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=weather,geometry,visualization,places,drawing&amp;sensor=false" type="text/javascript"></script>
+  <script
+      src="http://maps.googleapis.com/maps/api/js?libraries=weather,geometry,visualization,places,drawing&amp;sensor=false"
+      type="text/javascript"></script>
   <script src="{{ asset('bundles/dashboard/assets/libraries/jquery-google-map/infobox.js') }}"></script>
   <script src="{{ asset('bundles/dashboard/assets/libraries/jquery-google-map/markerclusterer.js') }}"></script>
   <script src="{{ asset('bundles/dashboard/assets/libraries/jquery-google-map/jquery-google-map.js') }}"></script>
   <script src="{{ asset('bundles/dashboard/assets/js/map.js') }}"></script>
 
-{% endblock javascripts%}
+{% endblock javascripts %}
