--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -29,14 +29,27 @@
 <div class="row">
   <div class="col m12">
     <ul class="tabs z-depth-1" style="width: 100%;">
-      <li class="tab col s3"><a class="active" href="#icons-mdi">Main Information</a></li>
-      <li class="tab col s3"><a href="#icons-fa" class="">Image Gallery</a></li>
-      <li class="tab col s3"><a href="#icons-ion" class="">Files</a></li>
+      <li class="tab col s3"><a class="active" href="#main-info">Main Information</a></li>
+      <li class="tab col s3"><a href="#image-gallery" class="">Image Gallery</a></li>
+      <li class="tab col s3"><a href="#extra-text" class="">Extra Text</a></li>
+      <li class="tab col s3"><a href="#files" class="">Files</a></li>
     </ul>
   </div>
 </div>
 
-<div class="row">
+<div class="row" id="image-gallery">
+  Image Gallery
+</div>
+
+<div class="row" id="extra-text">
+  Extra Text
+</div>
+
+<div class="row" id="files">
+  Files
+</div>
+
+<div class="row" id="main-info">
   <div class="col m12">
   <form action="#!">
     <div class="card">
