--- a/src/DashboardBundle/Resources/views/Common/backend2.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/backend2.html.twig
@@ -30,43 +30,17 @@
 
     {% block center %}
     <section class="content-wrap">
-
       {% block breadcrumb_body %}
         {% include 'DashboardBundle:Common:Partials/_backend-breadcrumb-body-top.html.twig' %}
               {% block breadcrumb %} {% endblock breadcrumb%}
         {% include 'DashboardBundle:Common:Partials/_backend-breadcrumb-body-down.html.twig' %}
       {% endblock breadcrumb_body%}
 
-
       {% block flash_message %}
-        {% set error   = app.session.flashbag.get('error')   %}
-        {% set info    = app.session.flashbag.get('info')    %}
-        {% set success = app.session.flashbag.get('success') %}
-
-        {% for msg in error %}
-          <div class="alert alert-dismissible red  lighten-4 red-text text-darken-2 alert-border-left">
-            <strong>Success!</strong> {{ msg }}
-            <button class="close">&times;</button>
-          </div>
-        {% endfor %}
-
-        {% for msg in info %}
-          <div class="alert alert-dismissible blue  lighten-4 blue-text text-darken-2 alert-border-left">
-            <strong>Success!</strong> {{ msg }}
-            <button class="close">&times;</button>
-          </div>
-        {% endfor %}
-
-        {% for msg in success %}
-          <div class="alert alert-dismissible green  lighten-4 green-text text-darken-2 alert-border-left">
-            <strong>Success!</strong> {{ msg }}
-            <button class="close">&times;</button>
-          </div>
-        {% endfor %}
-
+        {% include 'DashboardBundle:Common:Partials/_backend-flash-message.html.twig' %}
       {% endblock flash_message %}
 
-        {% block content %} {% endblock content%}
+      {% block content %} {% endblock content%}
     </section>
     {% endblock center%}
 
